tests/machine/x/kotlin/string_contains.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/string_contains.kt:8:13: error: expression '(s as MutableMap<*, *>)["contains"]' of type 'Any?' cannot be invoked as a function. The function 'invoke()' is not found
    println((s as MutableMap<*, *>)["contains"]("cat"))
            ^
/workspace/mochi/tests/machine/x/kotlin/string_contains.kt:9:13: error: expression '(s as MutableMap<*, *>)["contains"]' of type 'Any?' cannot be invoked as a function. The function 'invoke()' is not found
    println((s as MutableMap<*, *>)["contains"]("dog"))
            ^
