tests/machine/x/kotlin/string_contains.kt
// Generated by Mochi compiler v0.10.26 on 2025-07-16T17:38:35Z
fun String.starts_with(prefix: String): Boolean = this.startsWith(prefix)
// Code generated from string_contains.mochi

val s = "catch"

fun main() {
    println((s as MutableMap<*, *>)["contains"]("cat"))
    println((s as MutableMap<*, *>)["contains"]("dog"))
}
